fixed overlapping issue on remote

--- a/src/components/MobileController/MobileContainer.module.scss
+++ b/src/components/MobileController/MobileContainer.module.scss
@@ -33,7 +33,7 @@
         justify-content: center;
         width: 150px;
         height: 200px;
-        top: 40px;
+        top: 20px;
         z-index: 9;
         img {
             transform: scale(1);
@@ -119,7 +119,7 @@
             display: flex;
             justify-content: flex-end;
         }
-        top: -10px;
+        top: 15px;
         position: relative;
         display: flex;
         flex: 1;
